--- a/TileWorld/TileWorld/TileWorld.csproj
+++ b/TileWorld/TileWorld/TileWorld.csproj
@@ -111,10 +111,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera\Camera2d.cs" />
-    <Compile Include="Input\GamepadDevice.cs" />
-    <Compile Include="Input\InputDevice.cs" />
-    <Compile Include="Input\KeyboardDevice.cs" />
-    <Compile Include="Input\MouseDevice.cs" />
+    <Compile Include="Input\GamepadDevice.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Input\InputDevice.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Input\KeyboardDevice.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Input\MouseDevice.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -161,9 +169,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logging\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
