--- a/Tileworld/Tileworld/Solum.csproj
+++ b/Tileworld/Tileworld/Solum.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tileworld</RootNamespace>
-    <AssemblyName>Tileworld</AssemblyName>
+    <RootNamespace>Solum</RootNamespace>
+    <AssemblyName>Solum</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
@@ -123,6 +123,9 @@
     <Compile Include="Input\MouseDevice.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Menus\Button.cs" />
+    <Compile Include="Menus\Menu.cs" />
+    <Compile Include="Menus\MenuManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -137,9 +140,10 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TileworldContent\TileworldContent.contentproj">
-      <Name>TileworldContent</Name>
+    <ProjectReference Include="..\TileworldContent\SolumContent.contentproj">
+      <Name>SolumContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
+      <Project>{C7A20BD6-EB72-4CC9-AC23-4EECEFECC5CE}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
