--- a/Tileworld/Tileworld/Solum.csproj
+++ b/Tileworld/Tileworld/Solum.csproj
@@ -124,8 +124,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Menus\Button.cs" />
+    <Compile Include="Menus\MainMenu.cs" />
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Menus\MenuManager.cs" />
+    <Compile Include="Menus\PauseMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
