--- a/Solum/Solum/Solum.csproj
+++ b/Solum/Solum/Solum.csproj
@@ -133,9 +133,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SharedTanks\EmptyStaticWorldObject.cs" />
+    <Compile Include="SharedTanks\GridManager.cs" />
+    <Compile Include="SharedTanks\MovingObject.cs" />
+    <Compile Include="SharedTanks\SmartBombPickup.cs" />
+    <Compile Include="SharedTanks\SpawnObject.cs" />
+    <Compile Include="SharedTanks\StaticWorldObject.cs" />
+    <Compile Include="SharedTanks\Tank.cs" />
+    <Compile Include="SharedTanks\Wall.cs" />
+    <Compile Include="SharedTanks\WorldObject.cs" />
     <Compile Include="Utility\C.cs" />
     <Compile Include="Utility\G.cs" />
     <Compile Include="Utility\GameServices.cs" />
+    <Compile Include="Utility\LevelRefs.cs" />
     <Compile Include="Utility\Logger.cs" />
     <Compile Include="Utility\SoundRefs.cs" />
     <Compile Include="Utility\SpriteFontRefs.cs" />
