--- a/Solum/Solum/Solum.csproj
+++ b/Solum/Solum/Solum.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Utility\Logger.cs" />
     <Compile Include="Utility\SoundRefs.cs" />
     <Compile Include="Utility\SpriteFontRefs.cs" />
+    <Compile Include="Utility\TankControls.cs" />
     <Compile Include="Utility\TextureRefs.cs" />
   </ItemGroup>
   <ItemGroup>
