--- a/Solum/Solum/Solum.csproj
+++ b/Solum/Solum/Solum.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SharedTanks\Bullet.cs" />
     <Compile Include="SharedTanks\MovingObject.cs" />
     <Compile Include="SharedTanks\WorldObject.cs" />
     <Compile Include="SharedTanks\EmptyStaticWorldObject.cs" />
